# usaco-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: credential_storage.rs  main.rs  preferences.rs
src/cli/: auth.rs  mod.rs  preferences.rs  problem.rs  solution.rs  status_spinner.rs
src/http_client/: account.rs  mod.rs  problem.rs
