[package]
name = "usaco-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["grimsteel"]
keywords = ["usaco"]
categories = ["command-line-utilities"]
repository = "https://github.com/grimsteel/usaco-cli"
description = "Unofficial USACO cli: Supports automatic solution testing and submission"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
console = "0.15.8"
cookie = "0.18.1"
dialoguer = "0.11.0"
directories = "5.0.1"
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color"] }
indexmap = { version = "2.6.0", features = ["serde"] }
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["cookies", "json"] }
scraper = "0.21.0"
secret-service = { version = "4.0.0", features = ["rt-tokio-crypto-openssl"] }
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros", "sync", "fs", "net"] }
